--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,7 +33,7 @@ importMethodsFrom(oligoClasses, allele, bothStrands, calls, db,
                   manufacturer)
 
 
-importMethodsFrom(BiocGenerics, ncol, boxplot, residuals, image, weights)
+importMethodsFrom(BiocGenerics, ncol, boxplot, residuals, image)
 
 importMethodsFrom(stats4, coef, plot)
 
@@ -47,6 +47,8 @@ importFrom(affyio, read.celfile.header, read.celfile)
 
 importFrom(Biobase, assayDataElement, assayDataElementReplace,
            assayDataNew)
+
+importFrom(BiocGenerics, boxplot, image, ncol, residuals)
 
 importFrom(graphics, hist, lines, matplot, par)
 
@@ -67,8 +69,7 @@ importFrom(preprocessCore, normalize.quantiles,
            rma.background.correct,
            rcModelPLM, rcModelPLMr, rcModelPLMrr, rcModelPLMrc,
            rcModelWPLM, rcModelWPLMr, rcModelWPLMrr, rcModelWPLMrc,
-           rcModelMedianPolish,
-           subrcModelPLM, subrcModelMedianPolish)
+           rcModelMedianPolish)
 
 importFrom(splines, ns)
 
@@ -113,7 +114,7 @@ exportMethods(intensity, probesetNames)
 
 ## PLM
 export("fitPLM", "NUSE", "RLE")
-exportMethods("paCalls")
+exportMethods("image", "paCalls", coef, residuals, se)
 exportClasses(oligoPLM)
 exportMethods(ncol, nprobes, nprobesets, coef, coefs.probe, weights, residuals, se, se.probe, residualSE, geometry, method, manufacturer, annotation, show, boxplot, image)
 
