cleaning R CMD check
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/oligo@63713 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,7 +33,7 @@ importMethodsFrom(oligoClasses, allele, bothStrands, calls, db,
                   manufacturer)
 
 
-importMethodsFrom(BiocGenerics, ncol, boxplot, residuals, image, weights)
+importMethodsFrom(BiocGenerics, ncol, boxplot, residuals, image)
 
 importMethodsFrom(stats4, coef, plot)
 
@@ -69,8 +69,7 @@ importFrom(preprocessCore, normalize.quantiles,
            rma.background.correct,
            rcModelPLM, rcModelPLMr, rcModelPLMrr, rcModelPLMrc,
            rcModelWPLM, rcModelWPLMr, rcModelWPLMrr, rcModelWPLMrc,
-           rcModelMedianPolish,
-           subrcModelPLM, subrcModelMedianPolish)
+           rcModelMedianPolish)
 
 importFrom(splines, ns)
 
@@ -115,7 +114,7 @@ exportMethods(intensity, probesetNames)
 
 ## PLM
 export("fitPLM", "NUSE", "RLE")
-exportMethods("paCalls")
+exportMethods("image", "paCalls", coef, residuals, se)
 exportClasses(oligoPLM)
 exportMethods(ncol, nprobes, nprobesets, coef, coefs.probe, weights, residuals, se, se.probe, residualSE, geometry, method, manufacturer, annotation, show, boxplot, image)
 
