--- a/vignettes/Makefile
+++ b/vignettes/Makefile
@@ -1,7 +1,20 @@
-all: primer clean
+all: overview nimbleexpr affysnp experimental exongene clean
 
-primer: primer.tex
-	cp -p ../inst/scripts/primer.pdf .
+overview: V1Overview.tex
+	cp -p ../inst/scripts/V1Overview.pdf .
+
+nimbleexpr: V2NExpression.tex
+	cp -p ../inst/scripts/V2NExpression.pdf .
+
+affysnp: V3AffySnpGenotype.tex
+	cp -p ../inst/scripts/V3AffySnpGenotype.pdf .
+
+experimental: V4Experimental.tex
+	cp -p ../inst/scripts/V4Experimental.pdf .
+
+exongene: V4Experimental.tex
+	cp -p ../inst/scripts/V5ExonGene.pdf .
 
 clean:
-	$(RM) -f *.out *.bbl *.log *.aux *.blg *.brf *.toc *.tex Rplots.pdf
+	$(RM) -f *.out *.bbl *.log *.aux *.blg *.brf *.toc *.tex
+	$(RM) -f Rplots.pdf V2NExpression-*
