The 'annotation' and 'annotation<-' generics have been moved from Biobase (2.17.8) to BiocGenerics (0.3.2). All packages that 'setMethods' on these generics import them from BiocGenerics.
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/oligo@69535 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,7 +19,7 @@ importClassesFrom(oligoClasses, AffySNPPDInfo, DBPDInfo,
 ## Importing: Methods
 ######################################
 
-importMethodsFrom(Biobase, annotation, "annotation<-", channel,
+importMethodsFrom(Biobase, channel,
                   channelNames, combine, description, experimentData,
                   "experimentData<-", exprs, "exprs<-", featureData,
                   "featureData<-", featureNames, "featureNames<-",
@@ -49,7 +49,8 @@ importFrom(affyio, read.celfile.header, read.celfile)
 importFrom(Biobase, assayData, assayDataElement, assayDataElementReplace,
            assayDataNew, assayDataElementNames)
 
-importFrom(BiocGenerics, boxplot, image, ncol, residuals)
+importFrom(BiocGenerics, boxplot, image, ncol, residuals,
+           annotation, "annotation<-")
 
 importFrom(graphics, hist, lines, matplot, par)
 
