--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: oligo
-Version: 1.21.6
+Version: 1.21.7
 Title: Preprocessing tools for oligonucleotide arrays.
 Author: Benilton Carvalho and Rafael Irizarry. Contributors: Ben Bolstad, Vincent Carey, Wolfgang Huber, Harris Jaffee, Jim MacDonald, Matt Settles
 Maintainer: Benilton Carvalho <Benilton.Carvalho@cancer.org.uk>
-Depends: R (>= 2.15.0), oligoClasses (>= 1.19.41), Biobase (>= 2.17.7)
+Depends: R (>= 2.15.0), BiocGenerics (>= 0.3.2), oligoClasses (>= 1.19.43), 
+         Biobase (>= 2.17.8)
 Imports: affyio (>= 1.25.0),
          affxparser (>= 1.29.11),
          Biostrings (>= 2.25.12),
-         BiocGenerics (>= 0.3.1),
+         BiocGenerics (>= 0.3.2),
          DBI (>= 0.2-5),
          ff,
          graphics,
