BUG FIX: fixed order in which probes are read in justSNPRMA
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/oligo@78722 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: oligo
-Version: 1.25.1
+Version: 1.25.2
 Title: Preprocessing tools for oligonucleotide arrays.
 Author: Benilton Carvalho and Rafael Irizarry. Contributors: Ben Bolstad, Vincent Carey, Wolfgang Huber, Harris Jaffee, Jim MacDonald, Matt Settles
-Maintainer: Benilton Carvalho <Benilton.Carvalho@cancer.org.uk>
+Maintainer: Benilton Carvalho <beniltoncarvalho@gmail.com>
 Depends: R (>= 2.15.0), BiocGenerics (>= 0.3.2), oligoClasses (>= 1.19.43), 
          Biobase (>= 2.17.8)
 Imports: affyio (>= 1.25.0),
